# Hexital

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: deploy_release.yaml  dev_gen_docs.yaml  gen_docs.yaml  release.yaml  release_gen_docs.yaml  unit_test.yaml
2.0.2/: 404.html  index.html  sitemap.xml
2.0.2/analysis-catalogue/: index.html
2.0.2/candle-pattern-catalogue/: index.html
2.0.2/candlesticks-catalogue/: index.html
2.0.2/changelog/: index.html
2.0.2/features/: index.html
2.0.2/indicator-catalogue/: index.html
2.0.2/reference/: index.html
2.0.3/: 404.html  index.html  sitemap.xml
2.0.3/analysis-catalogue/: index.html
2.0.3/candle-pattern-catalogue/: index.html
2.0.3/candlesticks-catalogue/: index.html
2.0.3/changelog/: index.html
2.0.3/features/: index.html
2.0.3/indicator-catalogue/: index.html
2.0.3/reference/: index.html
3.0.0/: 404.html  index.html  sitemap.xml
3.0.0/analysis-catalogue/: index.html
3.0.0/candle-pattern-catalogue/: index.html
3.0.0/candlesticks-catalogue/: index.html
3.0.0/changelog/: index.html
3.0.0/features/: index.html
3.0.0/indicator-catalogue/: index.html
3.0.0/reference/: index.html
3.0.0/search/: search_index.json
3.0.1/: 404.html  index.html  sitemap.xml
3.0.1/analysis-catalogue/: index.html
3.0.1/candle-pattern-catalogue/: index.html
3.0.1/candlesticks-catalogue/: index.html
3.0.1/changelog/: index.html
3.0.1/features/: index.html
3.0.1/indicator-catalogue/: index.html
3.0.1/reference/: index.html
3.0.1/search/: search_index.json
about/alternatives/: index.html
about/design/: index.html
analysis-catalogue/: index.html
candle-pattern-catalogue/: index.html
candlesticks-catalogue/: index.html
changelog/: index.html
development/: 404.html  index.html  objects.inv  sitemap.xml
development/analysis-catalogue/: index.html
development/candle-pattern-catalogue/: index.html
development/candlesticks-catalogue/: index.html
development/changelog/: index.html
development/features/: index.html
development/indicator-catalogue/: index.html
development/reference/: index.html
development/search/: search_index.json
docs/: features.md  index.md  license.md
docs/about/: alternatives.md  design.md
docs/guides/: analysis-indepth.md  candles.md  candlesticks.md  custom-indicator.md  hexital-indepth.md  indicators-indepth.md  quick-start.md
docs/reference/: index.md
docs/scripts/: gen_ref_pages.py
features/: index.html
guides/analysis-indepth/: index.html
guides/candles/: index.html
guides/candlesticks/: index.html
guides/custom-indicator/: index.html
guides/hexital-indepth/: index.html
guides/indicators-indepth/: index.html
guides/quick-start/: index.html
hexital/: __init__.py  exceptions.py
hexital/analysis/: __init__.py  movement.py  patterns.py  utils.py
hexital/candlesticks/: __init__.py  heikinashi.py
hexital/core/: __init__.py  candle.py  candle_loader.py  candle_manager.py  candlestick_type.py  common.py  hexital.py  indicator.py  indicator_collection.py  ohlcv.py  types.py
hexital/indicators/: __init__.py  adx.py  amorph.py  aroon.py  atr.py  bbands.py  cmo.py  counter.py  donchian.py  ema.py  highest_lowest.py  hl.py  hla.py  hlca.py  hma.py  jma.py  kc.py  macd.py  managed.py  mfi.py  midpoint.py  obv.py  pattern.py  pivot_points.py  rma.py  roc.py  rsi.py  rvi.py  sma.py  stdev.py  stdevthres.py  stoch.py  supertrend.py  tr.py  tsi.py  vwap.py  vwma.py  wma.py
hexital/lib/: __init__.py  candle_extension.py  ohlcv.py  timeframe_utils.py  utils.py
hexital/types/: __init__.py  hexital.py  indicator.py  ohlcv.py
hexital/utilities/: __init__.py  analysis.py  candles.py  ohlcv.py  patterns.py  utils.py
hexital/utils/: __init__.py  candles.py  candlesticks.py  common.py  indexing.py  timeframe.py  weakreflist.py
indicator-catalogue/: index.html
latest/: 404.html  index.html  sitemap.xml
latest/analysis-catalogue/: index.html
latest/candle-pattern-catalogue/: index.html
latest/candlesticks-catalogue/: index.html
latest/changelog/: index.html
latest/features/: index.html
latest/indicator-catalogue/: index.html
latest/reference/: index.html
latest/search/: search_index.json
reference/: index.html
reference/SUMMARY/: index.html
reference/hexital/: index.html
search/: search_index.json
tests/: conftest.py  test_ema.py
tests/analysis/: test_movement.py  test_patterns.py
tests/candlesticks/: test_heikinashi.py  test_multi.py
tests/core/: test_candle.py  test_candle_loader.py  test_candle_manager.py  test_candlestick.py  test_core.py  test_hexital.py  test_hexital_timeframe.py  test_indicator.py  test_indicator_timeframe.py  test_internal.py  test_ohlcv.py  test_timeframe.py
tests/data/: NASDAQ.csv  fixtures_candles.py  fixtures_candles_converstion.py  fixtures_indicator_source_of_truth.py  fixtures_nasdaq.py  fixtures_patterns_source_of_truth.py  fixtures_source_of_truth.py  generate_dict.py  generate_new_data.py  nasdaq.py  (+2 more)
(+567 files in other folders)
