[tool.poetry]
name = "hexital"
version = "1.0.1"
description = "Hex Incremental Technical Analysis Library"
readme = "README.md"
license = "MIT"
authors = ["Merlin Roe <merlin.roe@hotmail.co.uk>"]
homepage = "https://github.com/MerlinR/Hexital"
repository = "https://github.com/MerlinR/Hexital"
documentation = "https://github.com/MerlinR/Hexital"
keywords = ["trading", "quant", "indicators"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
deepdiff = "*"

[tool.poetry.group.truth]
optional = true

[tool.poetry.group.truth.dependencies]
pandas = "^1.2.0"
numpy = "^1.22.0"
ta-lib = "*"
pandas-ta = { git = "https://github.com/twopirllc/pandas-ta.git#develop" }

[tool.poetry.group.speed_tests]
optional = true

[tool.poetry.group.speed_tests.dependencies]
matplotlib = "*"
pandas = "^1.2.0"
numpy = "^1.22.0"
ta-lib = "*"
pandas-ta = { git = "https://github.com/twopirllc/pandas-ta.git#develop" }

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
